Tuples and improved auto